favorite for DetailsView

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,12 +9,13 @@
     <string name="top_rated">Top Rated Movies</string>
     <string name="favorite">Favorite Movies</string>
     <string name="vote_average">%1$s/10</string>
+
     <string name="cd_poster_of_movie">Movie poster</string>
+    <string name="cd_favorite">Favorite</string>
     <string name="no_internet">No internet connection</string>
 
     <string name="type_movies_key">movies_type</string>
     <string name="type_movie_key">movie_type</string>
 
     <string name="title_activity_details">DetailsActivity</string>
-    <string name="action_settings">Settings</string>
 </resources>
