orientation changing for details view

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,5 +33,6 @@
     <string name="overview">Overview</string>
 
     <string name="review_header">Reviews (%1$s/%2$s)</string>
+    <string name="ordinalTrailerName">Trailer #</string>
 
 </resources>
