--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,7 +23,7 @@
 
     <!-- keys-->
     <string name="type_movies_key" translatable="false">movies_type</string>
-    <string name="type_movie_key" translatable="false">movie_type</string>
+    <string name="movie_key" translatable="false">movie</string>
 
     <!-- messages-->
     <string name="no_movies">No movies</string>
