--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,6 +26,7 @@
     <!-- keys-->
     <string name="type_movies_key" translatable="false">movies_type</string>
     <string name="movie_key" translatable="false">movie</string>
+    <string name="position_key" translatable="false">position</string>
 
     <!-- messages-->
     <string name="no_movies">No movies</string>
